# dreamzero-jax

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: README.md  decisions.md  progress.md
.claude/skills/wrap-up/: SKILL.md
scripts/: benchmark_components.py  benchmark_full.py  benchmark_gpu.py  compare_outputs.py  convert_checkpoint.py  convert_weights.py  debug_per_phase.py  definitive.py  generate_pt_fixtures.py  gpu_reference.py  inference.py  jax_component_parity.py  jax_dit_forward_from_pt_inputs.py  pt_full_dit_forward.py  pt_standalone_ops.py  pytorch_standalone_forward.py  train.py  validate_against_pytorch.py  validate_parity.py  validate_real_weights.py
src/dreamzero_jax/: __init__.py
src/dreamzero_jax/data/: __init__.py  dataset.py  transforms.py
src/dreamzero_jax/models/: __init__.py  action_head.py  causal_ops.py  dit.py  dreamzero.py  image_encoder.py  staged_inference.py  text_encoder.py  vae.py
src/dreamzero_jax/nn/: __init__.py  attention.py  compat.py  embed.py  mlp.py  pallas_ops.py
src/dreamzero_jax/schedulers/: __init__.py  flow_euler.py  flow_matching.py  unipc.py
src/dreamzero_jax/utils/: __init__.py  checkpoint.py  hf_download.py  parity_runners.py  quantize.py  sharding.py  validation.py
tests/: test_action_head.py  test_attention.py  test_checkpoint.py  test_dit.py  test_dreamzero.py  test_embed.py  test_image_encoder.py  test_mlp.py  test_numerical_parity.py  test_schedulers.py  test_sharding.py  test_text_encoder.py  test_transforms.py  test_vae.py
